feat:新增报告生成和图片分析功能

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,18 @@
 # 数据库配置
 DATABASE_URL=sqlite+aiosqlite:///./typhoon_analysis.db
 
-# DashScope API配置（必需）
+# AI服务提供商选择（可选值: qwen, deepseek）
+AI_PROVIDER=qwen
+
+# DashScope API配置（通义千问）
 # 请在 https://dashscope.console.aliyun.com/ 获取您的API密钥
 DASHSCOPE_API_KEY=sk-4f9e199d6bff4b8d93f67edddd750156
+
+# DeepSeek API配置
+# 请在 https://platform.deepseek.com/ 获取您的API密钥
+DEEPSEEK_API_KEY=sk-3psAiR8jHmOfu9qvmQ7Nm5e1b2PmasL1JJNWTf5oAkGvlwRo
+DEEPSEEK_MODEL=deepseek-chat
+DEEPSEEK_API_BASE_URL=https://ai.forestsx.top
 
 # AI模型配置
 QWEN_PLUS_MODEL=qwen-plus
@@ -42,6 +51,5 @@ MODELS_DIR=./data/models
 # 说明：
 # 1. DASHSCOPE_API_KEY: 阿里云通义千问API密钥，用于AI分析功能
 # 2. SECRET_KEY: 应用密钥，生产环境请更换为随机字符串（至少32位）
-# 3. CMA爬虫地址已更新为浙江省水利厅台风网API（更稳定）
 # 4. 数据文件夹已移至backend/data目录，用于存储台风数据和训练模型
 
