--- a/backend/.env
+++ b/backend/.env
@@ -10,14 +10,14 @@ DASHSCOPE_API_KEY=sk-4f9e199d6bff4b8d93f67edddd750156
 
 # DeepSeek API配置
 # 请在 https://platform.deepseek.com/ 获取您的API密钥
-DEEPSEEK_API_KEY=sk-3psAiR8jHmOfu9qvmQ7Nm5e1b2PmasL1JJNWTf5oAkGvlwRo
-DEEPSEEK_MODEL=deepseek-chat
-DEEPSEEK_API_BASE_URL=https://ai.forestsx.top
+DEEPSEEK_API_KEY=sk-uskyeujjqyyimonvygibtsppmptjcxwniifmaviqfofocrke
+DEEPSEEK_MODEL=deepseek-ai/DeepSeek-V3
+DEEPSEEK_API_BASE_URL=https://api.siliconflow.cn/v1
 
 # AI模型配置
 QWEN_PLUS_MODEL=qwen-plus
 QWEN_VL_MODEL=qwen-vl-max
-AI_TIMEOUT=30
+AI_TIMEOUT=60
 
 # 服务器配置
 DEBUG=true
