--- a/backend/.env
+++ b/backend/.env
@@ -1,55 +1,21 @@
 # 数据库配置
 DATABASE_URL=sqlite+aiosqlite:///./typhoon_analysis.db
 
-# AI服务提供商选择（可选值: qwen, deepseek）
-AI_PROVIDER=qwen
-
-# DashScope API配置（通义千问）
-# 请在 https://dashscope.console.aliyun.com/ 获取您的API密钥
-DASHSCOPE_API_KEY=sk-4f9e199d6bff4b8d93f67edddd750156
-
-# DeepSeek API配置
-# 请在 https://platform.deepseek.com/ 获取您的API密钥
-DEEPSEEK_API_KEY=sk-uskyeujjqyyimonvygibtsppmptjcxwniifmaviqfofocrke
-DEEPSEEK_MODEL=deepseek-ai/DeepSeek-V3
-DEEPSEEK_API_BASE_URL=https://api.siliconflow.cn/v1
-
-# AI模型配置
-QWEN_PLUS_MODEL=qwen-plus
-QWEN_VL_MODEL=qwen-vl-max
-AI_TIMEOUT=60
-
 # 服务器配置
-DEBUG=true
-HOST=0.0.0.0
-PORT=8000
 SECRET_KEY=sk-4f9e199d6bff4b8d93f67edddd750156-typhoon-analysis-secret-key-2024
 
-# CORS配置
-CORS_ORIGINS=["http://localhost:3000","http://localhost:5173","http://localhost:8080"]
 
-# CMA爬虫配置
-# 注意：CMA网站的API地址可能会变化，如遇到404错误请更新以下地址
-CMA_BASE_URL=https://typhoon.nmc.cn
-CMA_TYPHOON_LIST_URL=https://typhoon.nmc.cn/weatherservice/typhoon/jsons
-CRAWLER_USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
+# 两个AI服务（DeepSeek和Qwen）使用同一个API提供商
+AI_API_KEY=QC-a7764863a747b6c0ec634fd905954b31-114ccfcd8cc3431065df235f0b4460fa
+AI_API_BASE_URL=https://aiping.cn/api/v1
 
-# 定时爬取配置
-CRAWLER_ENABLED=True
-CRAWLER_INTERVAL_HOURS=1
-CRAWLER_START_ON_STARTUP=True
+# AI模型名称配置
+DEEPSEEK_MODEL=DeepSeek-R1-Distill-Qwen-14B
+QWEN_TEXT_MODEL=Qwen3-235B-A22B
+QWEN_VL_MODEL=Qwen3-VL-30B-A3B-Thinking
+GLM_MODEL=GLM-4.7
 
-# 日志配置
-LOG_LEVEL=INFO
-LOG_FILE=logs/app.log
+# 开发模式
+DEBUG=true
 
-# 数据存储路径
-DATA_DIR=./data
-IMAGES_DIR=./data/images
-MODELS_DIR=./data/models
-
-# 说明：
-# 1. DASHSCOPE_API_KEY: 阿里云通义千问API密钥，用于AI分析功能
-# 2. SECRET_KEY: 应用密钥，生产环境请更换为随机字符串（至少32位）
-# 4. 数据文件夹已移至backend/data目录，用于存储台风数据和训练模型
 
