--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,51 +1,50 @@
-# FastAPI 核心
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+# FastAPI core
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
 
-# 数据库
-sqlalchemy==2.0.25
-alembic==1.13.1
-aiosqlite==0.19.0
+# Database
+sqlalchemy>=2.0.0
+alembic>=1.13.0
+aiosqlite>=0.19.0
 
-# HTTP 客户端
-httpx==0.26.0
-requests==2.31.0
+# HTTP client
+httpx>=0.26.0
+requests>=2.31.0
 
-# 数据处理
-pandas==2.1.4
-numpy==1.26.3
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
 
-# 网页爬取
-beautifulsoup4==4.12.3
-lxml==5.1.0
+# Web scraping
+beautifulsoup4>=4.12.0
+lxml>=5.0.0
 
-# 机器学习
-torch>=2.2.0
-scikit-learn==1.4.0
+# Machine learning
+torch>=2.0.0
+scikit-learn>=1.3.0
 
-# AI 服务
-dashscope==1.14.1
+# AI service
+dashscope>=1.14.0
 
-# 工具
-python-dotenv==1.0.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+# Tools
+python-dotenv>=1.0.0
+python-multipart>=0.0.6
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
 
-# 日志
-loguru==0.7.2
+# Logging
+loguru>=0.7.0
 
-# 定时任务
-apscheduler==3.10.4
+# Scheduler
+apscheduler>=3.10.0
 
-# 数据验证
-email-validator==2.1.0
+# Data validation
+email-validator>=2.1.0
 
-# 开发工具
-pytest==7.4.4
-pytest-asyncio==0.23.3
-black==23.12.1
-flake8==7.0.0
-
+# Development tools
+pytest>=7.4.0
+pytest-asyncio>=0.23.0
+black>=23.12.0
+flake8>=7.0.0
