--- a/service/package.json
+++ b/service/package.json
@@ -11,6 +11,9 @@
     },
     "dependencies": {
         "axios": "^1.6.5",
+        "echarts": "^6.0.0",
+        "echarts-for-react": "^3.0.5",
+        "html2pdf.js": "^0.14.0",
         "leaflet": "^1.9.4",
         "marked": "^11.1.1",
         "react": "^18.2.0",
