--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,50 +1,28 @@
-# FastAPI core
-fastapi>=0.109.0
-uvicorn[standard]>=0.27.0
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
-
-# Database
-sqlalchemy>=2.0.0
-alembic>=1.13.0
-aiosqlite>=0.19.0
-
-# HTTP client
-httpx>=0.26.0
-requests>=2.31.0
-
-# Data processing
-pandas>=2.0.0
-numpy>=1.24.0
-
-# Web scraping
-beautifulsoup4>=4.12.0
-lxml>=5.0.0
-
-# Machine learning
-torch>=2.0.0
-scikit-learn>=1.3.0
-
-# AI service
-dashscope>=1.14.0
-
-# Tools
-python-dotenv>=1.0.0
-python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-
-# Logging
-loguru>=0.7.0
-
-# Scheduler
-apscheduler>=3.10.0
-
-# Data validation
-email-validator>=2.1.0
-
-# Development tools
-pytest>=7.4.0
-pytest-asyncio>=0.23.0
-black>=23.12.0
-flake8>=7.0.0
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+sqlalchemy==2.0.0
+alembic==1.13.0
+aiosqlite==0.19.0
+httpx==0.26.0
+requests==2.31.0
+pandas==2.0.0
+numpy==1.24.0
+beautifulsoup4==4.12.0
+lxml==4.9.0
+torch==1.13.1
+scikit-learn==1.3.0
+Pillow==10.0.0
+dashscope==1.14.0
+python-dotenv==1.0.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+loguru==0.7.0
+apscheduler==3.10.0
+email-validator==2.1.0
+pytest==7.4.0
+pytest-asyncio==0.21.0
+black==23.3.0
+flake8==6.0.0
