--- a/backend/.env
+++ b/backend/.env
@@ -10,7 +10,7 @@ AI_API_KEY=QC-a7764863a747b6c0ec634fd905954b31-114ccfcd8cc3431065df235f0b4460fa
 AI_API_BASE_URL=https://aiping.cn/api/v1
 
 # AI模型名称配置
-DEEPSEEK_MODEL=DeepSeek-R1-Distill-Qwen-14B
+DEEPSEEK_MODEL=DeepSeek-V3.2
 QWEN_TEXT_MODEL=Qwen3-235B-A22B
 QWEN_VL_MODEL=Qwen3-VL-30B-A3B-Thinking
 GLM_MODEL=GLM-4.7
