--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,7 @@ AI_API_BASE_URL=https://aiping.cn/api/v1
 
 # AI模型名称配置
 DEEPSEEK_MODEL=DeepSeek-V3.2
+DEEPSEEK_NOTHINK_MODEL=DeepSeek-R1-0528
 QWEN_TEXT_MODEL=Qwen3-235B-A22B
 GLM_MODEL=GLM-4.7
 
