--- a/service/package.json
+++ b/service/package.json
@@ -10,6 +10,9 @@
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
     },
     "dependencies": {
+        "@ant-design/icons": "^6.1.0",
+        "@ant-design/x": "^2.1.3",
+        "antd": "^6.2.1",
         "axios": "^1.6.5",
         "echarts": "^6.0.0",
         "echarts-for-react": "^3.0.5",
