fix:新增配置deepseek深度思考api,优化prompt逻辑

--- a/backend/.env
+++ b/backend/.env
@@ -9,9 +9,12 @@ SECRET_KEY=sk-4f9e199d6bff4b8d93f67edddd750156-typhoon-analysis-secret-key-2024
 AI_API_KEY=QC-a7764863a747b6c0ec634fd905954b31-114ccfcd8cc3431065df235f0b4460fa
 AI_API_BASE_URL=https://aiping.cn/api/v1
 
+AI_API_KEY_THINKING=sk-AeHLDq1NrSPXqQk40e94B03b64224022A3436cB6EbC54836
+AI_API_BASE_URL_THINKING=https://dpapi.cn/v1
+
 # AI模型名称配置
+DEEPSEEK_MODEL_THINKING=deepseek-r1
 DEEPSEEK_MODEL=DeepSeek-V3.2
-DEEPSEEK_NOTHINK_MODEL=DeepSeek-R1-0528
 QWEN_TEXT_MODEL=Qwen3-235B-A22B
 GLM_MODEL=GLM-4.7
 
