feat:新增用户登录注册界面，调整AI对话流式输出

--- a/backend/.env
+++ b/backend/.env
@@ -20,5 +20,11 @@ GLM_MODEL=GLM-4.7
 
 # 开发模式
 DEBUG=true
+# 阿里云OSS配置
+OSS_ACCESS_KEY_ID=
+OSS_ACCESS_KEY_SECRET=
+OSS_BUCKET_NAME=typhoonanalysis
+OSS_REGION=oss-cn-wuhan
+OSS_ENDPOINT=oss-cn-wuhan-lr.aliyuncs.com
 
 
