--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ MANIFEST
 venv/
 env/
 ENV/
+*.env
 
 # IDE 文件
 .idea/
@@ -44,8 +45,9 @@ ehthumbs.db
 Thumbs.db
 
 # 环境变量
-
+.env
 .env.local
+backend/.env
 
 # 数据库文件
 *.db
@@ -72,5 +74,4 @@ model/*.h5
 tmp/
 temp/
 *.tmp
-
-
+.claude
