--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,8 @@ python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 loguru==0.7.0
+oss2==2.18.0
+alibabacloud-oss-v2==1.2.3
 apscheduler==3.10.0
 email-validator==2.1.0
 pytest==7.4.0
