--- a/fronted/package.json
+++ b/fronted/package.json
@@ -12,8 +12,10 @@
     "dependencies": {
         "@ant-design/icons": "^6.1.0",
         "@ant-design/x": "^2.1.3",
+        "ali-oss": "^6.23.0",
         "antd": "^6.2.1",
         "axios": "^1.6.5",
+        "crypto-js": "^4.2.0",
         "echarts": "^6.0.0",
         "echarts-for-react": "^3.0.5",
         "html2pdf.js": "^0.14.0",
