--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,12 +7,12 @@ alembic==1.13.0
 aiosqlite==0.19.0
 httpx==0.26.0
 requests==2.31.0
-pandas==2.0.0
-numpy==1.24.0
+pandas==2.1.4
+numpy==1.26.4
 beautifulsoup4==4.12.0
-lxml==4.9.0
-torch==1.13.1
-scikit-learn==1.3.0
+lxml==5.1.0
+scipy==1.11.4
+scikit-learn==1.3.2
 Pillow==10.0.0
 dashscope==1.14.0
 python-dotenv==1.0.0
