--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,33 +1,59 @@
+# FastAPI 核心依赖
 fastapi>=0.115.2
 uvicorn[standard]==0.27.0
 pydantic==2.9.2
 pydantic-settings==2.6.1
+
+# 数据库
 sqlalchemy==2.0.36
 alembic==1.13.0
 aiosqlite==0.19.0
+
+# HTTP 请求
 httpx==0.26.0
 requests==2.31.0
+
+# 数据处理
 pandas==2.2.3
 numpy==2.1.3
-beautifulsoup4==4.12.0
-lxml==5.3.0
 scipy==1.14.1
 scikit-learn==1.5.2
+
+# 图像处理
 Pillow==11.0.0
+opencv-python==4.10.0.84
+
+# AI 服务
 dashscope==1.14.0
-python-dotenv==1.0.0
-python-multipart>=0.0.18
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-loguru==0.7.0
+qwen-asr==0.0.6
+torch==2.6.0
+huggingface-hub==0.28.1
+
+# 文本处理
+opencc-python-reimplemented==0.1.7
+beautifulsoup4==4.12.0
+lxml==5.3.0
+
+# 云存储
 oss2==2.18.0
 alibabacloud-oss-v2==1.2.3
-apscheduler==3.10.0
+
+# 认证与安全
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart>=0.0.18
 email-validator==2.1.0
+
+# 日志与配置
+loguru==0.7.0
+python-dotenv==1.0.0
+
+# 定时任务
+apscheduler==3.10.0
+
+# 开发工具
 pytest==7.4.0
 pytest-asyncio==0.21.0
 black==23.3.0
 flake8==6.0.0
 setuptools==69.5.1
-qwen-asr==0.0.6
-opencc-python-reimplemented==0.1.7
