fix:修改使用本地asr模型为调用阿里云api

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -39,9 +39,12 @@ GLM_MODEL=glm-4-plus
 QWEN_TEXT_MODEL=Qwen3-235B-A22B
 QWEN_VL_MODEL=qwen-vl-max-latest
 
-# ASR 模型配置（可选）
-# 本地模型路径，留空则使用默认路径或从 HuggingFace 下载
-# QWEN_ASR_MODEL_PATH=./data/asr_model/Qwen3-ASR-0.6B
+# ASR 语音识别配置（阿里云NLS）
+# 从阿里云智能语音交互控制台获取: https://nls-portal.console.aliyun.com/
+# NLS_APPKEY=your-nls-appkey
+# NLS_ACCESS_KEY_ID=your-access-key-id
+# NLS_ACCESS_KEY_SECRET=your-access-key-secret
+# NLS_URL=wss://nls-gateway-cn-shanghai.aliyuncs.com/ws/v1
 
 # 爬虫配置
 CRAWLER_ENABLED=True
